<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="message">Message</string>
    <string name="something_went_wrong">Something went wrong, Please try later.</string>
    <string name="no_connection">Internet connection seems to be offline.</string>
    <string name="app_name">Moments</string>
    <string name="title_home">Feed</string>
    <string name="title_collections">Collections</string>
    <string name="undo">Undo</string>
    <string name="title_menu">Menu</string>
    <string name="welcome_to">Welcome to</string>
    <string name="moments">Moments</string>
    <string name="wootric">InMoment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="number_of_activities">%d Activities</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="empty_username_password">Please enter username and password</string>
    <string name="imageView">imageView</string>
    <string name="read_more">Read more</string>
    <string name="comments">1 comments</string>
    <string name="xi_application">XI APPLICATION</string>
    <string name="invalid_email">Please enter valid email.</string>
    <string name="welcome">Welcome!</string>
    <string name="product_tour">Product Tour</string>
    <string name="you_are_caught_up">You are caught up</string>
    <string name="new_moments">New Moments</string>
    <string name="new_pills">New</string>
    <string name="no_connectivity">No Internet connection</string>
    <string name="user_profile">User Profile</string>
    <string name="reward_screen">Reward</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="version">Version:</string>
    <string name="_2020_inmoment_inc_all_rights_reserved_n_unauthorized_access_is_prohibited">2020 InMoment, Inc. All rights reserved. \n Unauthorized access is prohibited</string>
    <string name="english">English</string>
    <string name="error_login_failed">Login Failed.</string>
    <string name="error">Error</string>
    <string name="session_expired">Session Expired</string>
    <string name="login_again_msg">Please login again</string>
    <string name="error_getting_user_data">Failed to get user data.</string>
    <string name="error_getting_moments_data">Failed to get moments.</string>
    <string name="error_delete_favorite">Failed to remove moments.</string>
    <string name="error_getting_program_data">Failed to get Program.</string>
    <string name="space">%s | %s</string>
    <string name="all_moments">All Moments</string>
    <string name="error_getting_collection_data">Failed to get collection data.</string>
    <string name="error_delete_collection_data">Failed to delete collection.</string>
    <string name="error_getting_saved_views_data">Failed to get SavedView data.</string>
    <string name="error_reward_recognition">Failed to send recognition data.</string>
    <string name="error_create_collection">Failed to create collection.</string>
    <string name="error_create_and_add_to_fav_collection">Failed to add in Favorite collection.</string>
    <string name="error_self_recognition">Recognizing yourself is not allowed.</string>
    <string name="dummy_sign_in">     </string>
    <string name="empty_password">Enter password</string>
    <string name="select_account">Select Account</string>
    <string name="select_program">Select Program</string>
    <string name="deleted_collection_message"><![CDATA[<b>Deleted </b> %s collection]]></string>
    <string name="deleted_favorite_message"><![CDATA[<b>Deleted </b> from %s. ]]></string>
    <string name="add_to_my_favorite"><![CDATA[<b>Saved </b> to My Favorites.<br/> <b>Want to save to another collection?</b>]]></string>
    <string name="add_to_another_collection"><![CDATA[<b>Saved </b> to %s.]]></string>
    <string name="view_collection">View Collection</string>
    <string name="my_favorites">My Favorites</string>
    <string name="char_remaining">%s remaining</string>
    <string name="data_source_name_collection">Data Source: %s</string>
    <string name="create_collection_message">%s collection is created.</string>
    <string name="delete_collection_message">Are you sure you want to delete %s collection?</string>
    <string name="send">Send</string>
    <string name="recognition_submitted">Recognition Submitted</string>
    <string name="name_a_new_collection">Name a new collection</string>
    <string name="save">Save</string>
    <string name="delete_collection_msg">Choose a collection to delete</string>
    <string name="create_new_collection_msg">Create a New collection</string>
    <string name="proceed">Proceed</string>

    <!--    Accessibility messages-->
    <string name="navigate_previous_screen">Navigate to previous screen</string>
    <string name="employee_name">Name</string>
    <string name="reason_for_recognition">Reason for recognition</string>
    <string name="point">Point</string>
    <string name="reward_screen_title">Who do you want to recognize?</string>
    <string name="recognition_count_title">This recognition program awards (Points)</string>
    <string name="cancel">Cancel</string>
    <string name="selected_saved_view">Selected Saved View</string>
    <string name="empty_saved_view_error_message">Oops! Looks like you don’t have data</string>
    <string name="please_contact_your_administrator">Please contact your administrator</string>
    <string name="no_moments_in_collection">Oops! No moments in collection</string>
    <string name="experience_score">Experience Score</string>
    <string name="feed_comment_text">I had a decent experience today at this store. We were the first ones to go in, so we did not had to wait long to be helped.</string>


</resources>