<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.inmoment.moments.reward.RewardViewModel" />

        <variable
            name="fragment"
            type="com.inmoment.moments.reward.ui.RewardFragment" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_shadow_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp16">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_screen_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:drawableLeft="@drawable/icon_mask_group"
                android:drawablePadding="@dimen/dp10"
                android:fontFamily="@font/ibm_plex_sans_semi_bold"
                android:gravity="center|left"
                android:text="@string/reward_screen_title"
                android:textColor="@color/blueWhale"
                android:textSize="@dimen/sp18"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:background="@drawable/rounded_gray_border"
                android:hint="@string/employee_name"
                android:inputType="text"
                android:maxLength="30"
                android:padding="@dimen/dp15"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/txt_screen_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_recognition_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:background="@drawable/rounded_gray_border"
                android:gravity="top"
                android:hint="@string/reason_for_recognition"
                android:inputType="textMultiLine"
                android:maxLength="2000"
                android:maxLines="5"
                android:minLines="2"
                android:padding="@dimen/dp15"
                android:text="@={viewModel.recognitionReasonMsg}"
                app:layout_constraintTop_toBottomOf="@+id/edt_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_recognition_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:text="@{@string/char_remaining(2000-viewModel.recognitionReasonMsg.length)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_recognition_reason"
                tools:text="2000 remaining" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_points_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/recognition_count_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_recognition_count" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:background="@drawable/rounded_gray_border"
                android:hint="@string/point"
                android:inputType="number"
                android:maxLength="5"
                android:padding="@dimen/dp15"
                android:text="@={viewModel.pointField}"
                app:layout_constraintTop_toBottomOf="@+id/txt_points_title" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp16"
                android:fontFamily="@font/montserrat_medium"
                android:onClick="@{()->fragment.cancelButtonClick()}"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/blueWhale"
                android:textSize="@dimen/sp14"
                app:layout_constraintBottom_toBottomOf="@+id/btn_send"
                app:layout_constraintRight_toLeftOf="@+id/btn_send"
                app:layout_constraintTop_toTopOf="@+id/btn_send" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                style="@style/roundedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:enabled="@{(TextUtils.isEmpty(viewModel.nameField)||TextUtils.isEmpty(viewModel.recognitionReasonMsg) ||TextUtils.isEmpty(viewModel.pointField))? false:true}"
                android:onClick="@{()->fragment.sendDataButtonClick()}"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:text="@string/send"
                app:backgroundColor="@{(TextUtils.isEmpty(viewModel.nameField)||TextUtils.isEmpty(viewModel.recognitionReasonMsg) ||TextUtils.isEmpty(viewModel.pointField))?@color/blueWhale_disable :@color/blueWhale}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_points" />

            <android.gesture.GestureOverlayView
                android:id="@+id/overlay_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>