<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_add_collection">
    <action
        android:id="@+id/action_UserProfileFragment"
        app:destination="@id/navigation_user_profile"
        app:enterAnim="@anim/slide_in_bottom"
        app:popExitAnim="@anim/slide_out_bottom" />

    <action
        android:id="@+id/action_RewardFragment"
        app:destination="@id/navigation_reward"
        app:enterAnim="@anim/slide_in_bottom"
        app:launchSingleTop="true"
        app:popExitAnim="@anim/slide_out_bottom"
        app:popUpTo="@+id/navigation_home"
        app:popUpToInclusive="false" />
    <action
        android:id="@+id/action_AddCollectionFragment"
        app:destination="@id/navigation_add_collection"
        app:enterAnim="@anim/slide_in_bottom"
        app:launchSingleTop="true"
        app:popExitAnim="@anim/slide_out_bottom"
        app:popUpTo="@+id/navigation_add_collection"
        app:popUpToInclusive="false" />

    <action
        android:id="@+id/action_MenuFragment"
        app:destination="@id/navigation_menu"
        app:enterAnim="@anim/slide_in_bottom"
        app:launchSingleTop="true"
        app:popExitAnim="@anim/slide_out_bottom"
        app:popUpTo="@+id/navigation_menu"
        app:popUpToInclusive="false" />
    <action
        android:id="@+id/action_AccountProgramPickerFragment"
        app:destination="@id/navigation_account_program" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.inmoment.moments.home.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

    </fragment>
    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.inmoment.moments.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu">
        <argument
            android:name="feeds"
            android:defaultValue="@null"
            app:argType="com.inmoment.moments.home.model.Feed"
            app:nullable="true" />
        <argument
            android:name="menu"
            android:defaultValue="none"
            app:argType="string"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.inmoment.moments.userprofile.UserProfileFragment"
        android:label="@string/user_profile"
        tools:layout="@layout/fragment_user_profile"></fragment>

    <fragment
        android:id="@+id/navigation_reward"
        android:name="com.inmoment.moments.reward.ui.RewardFragment"
        android:label="@string/reward_screen"
        tools:layout="@layout/fragment_reward">
        <argument
            android:name="feeds"
            android:defaultValue="@null"
            app:argType="com.inmoment.moments.home.model.Feed"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_collection"
        android:name="com.inmoment.moments.menu.collection.ui.AddCollectionFragment"
        tools:layout="@layout/fragment_add_collection">
        <argument
            android:name="collection"
            android:defaultValue="@null"
            app:argType="com.inmoment.moments.framework.datamodel.CollectionsResponseData"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account_program"
        android:name="com.inmoment.moments.program.AccountProgramPickerFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_account_program_picker"></fragment>
</navigation>