<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginViewModel"
            type="com.inmoment.moments.login.ui.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelWelcomeTV"
            style="@style/LoginHeaderTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/welcome_to"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.103" />

        <TextView
            android:id="@+id/labelMomentsTV"
            style="@style/LoginHeaderTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moments"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelWelcomeTV" />

        <ScrollView
            android:id="@+id/loginSV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/footerIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelMomentsTV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/emailTV"
                    style="@style/LabelTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.inmoment.moments.framework.ui.NoChangingBackgroundTextInputLayout
                    android:id="@+id/emailETParent"
                    style="@style/EditTextViewAndButtonStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorMsg="@{loginViewModel.emailErrorMsgMLD.toString()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailTV">

                    <EditText
                        android:id="@+id/emailET"
                        style="@style/EditTextViewAndButtonStyle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/sign_in_password_border_circular_white"
                        android:gravity="start"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:textCursorDrawable="@drawable/cursor_color"
                        tools:ignore="LabelFor" />

                </com.inmoment.moments.framework.ui.NoChangingBackgroundTextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/passwordTV"
                    style="@style/LabelTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailETParent" />

                <com.inmoment.moments.framework.ui.NoChangingBackgroundTextInputLayout
                    android:id="@+id/passwordETParent"
                    style="@style/EditTextViewAndButtonStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorMsg="@{loginViewModel.passwordErrorMsgMLD.toString()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTV"
                    app:passwordToggleDrawable="@drawable/password_toggle_selector"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/passwordET"
                        style="@style/EditTextViewAndButtonStyle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/sign_in_password_border_circular_white"
                        android:drawableEnd="@drawable/visibility_off"
                        android:gravity="start"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/cursor_color"
                        tools:ignore="LabelFor" />

                </com.inmoment.moments.framework.ui.NoChangingBackgroundTextInputLayout>

                <TextView
                    android:id="@+id/forgotPasswordTV"
                    style="@style/LabelTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordETParent" />

                <TextView
                    android:id="@+id/signInButton"
                    style="@style/SignInButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTV"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/signInBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTV"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/signInWithGoogleButton"
                    style="@style/EditTextViewAndButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/border_circular_white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:text="@string/sign_in_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/blueBayoux"
                    app:drawableStartCompat="@drawable/google"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signInButton"
                    tools:ignore="LabelFor,UnusedAttribute" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/footerIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/inmoment_powered_by_vertical_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/loginPB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>