<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_shadow_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/productTourHyperlinkTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <LinearLayout
                android:id="@+id/userProfileLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userNameTV"
                    style="@style/UserNameStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/account_black"
                    android:drawablePadding="6dp"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/logoutButton"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/border_circular_bluewhale"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userNameTV" />

                <TextView
                    android:id="@+id/languageLabelTV"
                    style="@style/UserProfilePageTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

                <Spinner
                    android:id="@+id/languageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/spinner_bg"
                    android:overlapAnchor="false"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:theme="@style/customSpinnerDialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/languageLabelTV" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/productTourHyperlinkTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="120dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/versionTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/versionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/ibm_plex_sans_semi_bold"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/light_grayish_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/footerTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/footerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/ibm_plex_sans"
            android:gravity="center|bottom"
            android:text="@string/_2020_inmoment_inc_all_rights_reserved_n_unauthorized_access_is_prohibited"
            android:textColor="@color/light_grayish_blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>